corrected spacing issue PostDetails

--- a/src/style/PostDetails.css
+++ b/src/style/PostDetails.css
@@ -170,6 +170,7 @@
 .post-update-text {
     width: 35%;
     height: 80%;
+    margin-top: 2%;
     margin-left: 5%;
     font-family: Burma-Soft;
     font-size: 18pt;
